added followUser action
